package inscryption.carte;

public enum TypeObstacle
{
    ROCHER,
    SAPIN
}
